어플 색상 변경 및 타이틀 바를 없애려고 노력했지만 실패

--- a/K_league_info/app/src/main/res/values/strings.xml
+++ b/K_league_info/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">K_league_info</string>
 
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Team</string>
-    <string name="title_notifications">Community</string>
+    <string name="title_score">Score</string>
+    <string name="title_team">Team</string>
+    <string name="title_community">Community</string>
 </resources>
